Complete basic modal form functionality
Modal is shown with form, submitting the form adds
to the book list. The table will not reset whenever
a new item is added so it just grows bigger exponentially.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <title>Document</title>
 </head>
 <body>
+    <button id="addBookButton">Add Book</button>
+    <dialog id="modal">
+        <form>
+            <label for="bookName">Book name:</label>
+            <input type="text" id="bookName" name="bookName">
+            <label for="author">Author:</label>
+            <input type="text" id="author" name="author">
+            <label for="pageCount">Page count:</label>
+            <input type="text" id="pageCount" name="pageCount">
+            <label for="isRead">Read:</label>
+            <input type="checkbox" id="isRead" name="isRead">
+            <button type="submit" id="submit">Submit</button>
+            <button formmethod="dialog">Cancel</button>
+        </form>
+    </dialog>
     <table id="bookTable">
         <tr>
             <th>Title</th>
