Complete delete functionality

--- a/index.html
+++ b/index.html
@@ -22,12 +22,18 @@
         </form>
     </dialog>
     <table id="bookTable">
-        <tr>
-            <th>Title</th>
-            <th>Author</th>
-            <th>Pages</th>
-            <th>Read</th>
-        </tr>
+        <thead>
+            <tr>
+                <th>Title</th>
+                <th>Author</th>
+                <th>Pages</th>
+                <th>Read</th>
+                <th>Delete</th>
+            </tr>
+        </thead>
+        <tbody>
+
+        </tbody>
     </table>
 </body>
 <script src="./scripts.js"></script>
