--- a/index.html
+++ b/index.html
@@ -4,37 +4,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <button id="addBookButton">Add Book</button>
-    <dialog id="modal">
-        <form>
-            <label for="bookName">Book name:</label>
-            <input type="text" id="bookName" name="bookName">
-            <label for="author">Author:</label>
-            <input type="text" id="author" name="author">
-            <label for="pageCount">Page count:</label>
-            <input type="text" id="pageCount" name="pageCount">
-            <label for="isRead">Read:</label>
-            <input type="checkbox" id="isRead" name="isRead">
-            <button type="submit" id="submit">Submit</button>
-            <button formmethod="dialog">Cancel</button>
-        </form>
-    </dialog>
-    <table id="bookTable">
-        <thead>
-            <tr>
-                <th>Title</th>
-                <th>Author</th>
-                <th>Pages</th>
-                <th>Read</th>
-                <th>Delete</th>
-            </tr>
-        </thead>
-        <tbody>
-
-        </tbody>
-    </table>
+    <div id="page">
+        <div id="leftSide">
+            <div id="titleArea">
+                <svg width="100" height="150" viewBox="0 0 100 150" preserveAspectRatio="xMidYMid meet">
+                    <polygon class="spineIndent" points="9,-1 13,2 10,2"/>
+                    <polygon class="spineIndent" points="21,-1 21,2 17,2 21,-1"/>
+                    <polygon class="spineIndent" points="9,151 13,148 13,2 10,-1"/>
+                    <polygon class="spineIndent" points="21,151 21,148 17,148 17,148"/>
+                    <rect class="spineIndent" x="10" y="2" width="10" height="146"/>
+                    <rect class="backgroundCover" width="10" height="150"/>
+                    <rect class="backgroundCover" x="20" width="130" height="150"/>
+                    <!-- FIX THIS COLOR!! -->
+                    <!-- <rect id="titleArea" x="35" y="20" width="50" height="25" fill="darkbrown"/>  -->
+                </svg>  
+                <div id="titleText">
+                    <h1>Book Tracker</h1>
+                    <h2>By Tyler McKenna</h2>
+                </div>
+            </div>
+            <button id="addBookButton">Add book to collection</button>
+            <dialog id="modal">
+                <form>
+                    <label for="bookName">Book name:</label>
+                    <input type="text" id="bookName" name="bookName">
+                    <label for="author">Author:</label>
+                    <input type="text" id="author" name="author">
+                    <label for="pageCount">Page count:</label>
+                    <input type="text" id="pageCount" name="pageCount">
+                    <label for="isRead">Read:</label>
+                    <input type="checkbox" id="isRead" name="isRead">
+                    <button type="submit" id="submit">Submit</button>
+                    <button formmethod="dialog">Cancel</button>
+                </form>
+            </dialog>
+        </div>
+        <div id="rightSide">
+            <table id="bookTable">
+                <thead>
+                    <tr>
+                        <th>Title</th>
+                        <th>Author</th>
+                        <th>Pages</th>
+                        <th>Read</th>
+                        <th>Delete</th>
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+        </div>
+    </div>
 </body>
 <script src="./scripts.js"></script>
 </html>
